@@ -45,6 +45,7 @@ import org.elasticsearch.index.query.TermQueryBuilder;
 import org.elasticsearch.index.query.WrapperQueryBuilder;
 import org.elasticsearch.index.query.functionscore.ScoreFunctionBuilders;
 import org.elasticsearch.index.search.MatchQuery;
+import org.elasticsearch.indices.IndicesService;
 import org.elasticsearch.indices.TermsLookup;
 import org.elasticsearch.plugins.Plugin;
 import org.elasticsearch.rest.RestStatus;
@@ -175,7 +176,7 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testIndexOptions() throws Exception {
         assertAcked(prepareCreate("test")
-                .addMapping("type1", "field1", "type=text,index_options=docs"));
+                .setMapping("field1", "type=text,index_options=docs"));
         indexRandom(true,
                 client().prepareIndex("test").setId("1").setSource("field1", "quick brown fox", "field2", "quick brown fox"),
                 client().prepareIndex("test").setId("2").setSource("field1", "quick lazy huge brown fox",
@@ -315,8 +316,8 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testDateRangeInQueryString() {
         //the mapping needs to be provided upfront otherwise we are not sure how many failures we get back
         //as with dynamic mappings some shards might be lacking behind and parse a different query
-        assertAcked(prepareCreate("test").addMapping(
-                "type", "past", "type=date", "future", "type=date"
+        assertAcked(prepareCreate("test").setMapping(
+            "past", "type=date", "future", "type=date"
         ));
 
         ZonedDateTime now = ZonedDateTime.now(ZoneOffset.UTC);
@@ -341,7 +342,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testDateRangeInQueryStringWithTimeZone_7880() {
         //the mapping needs to be provided upfront otherwise we are not sure how many failures we get back
         //as with dynamic mappings some shards might be lacking behind and parse a different query
-        assertAcked(prepareCreate("test").addMapping("type", "past", "type=date"));
+        assertAcked(prepareCreate("test").setMapping("past", "type=date"));
 
         ZoneId timeZone = randomZone();
         String now = DateFormatter.forPattern("strict_date_optional_time").format(Instant.now().atZone(timeZone));
@@ -358,8 +359,8 @@ public class SearchQueryIT extends ESIntegTestCase {
     public void testDateRangeInQueryStringWithTimeZone_10477() {
         //the mapping needs to be provided upfront otherwise we are not sure how many failures we get back
         //as with dynamic mappings some shards might be lacking behind and parse a different query
-        assertAcked(prepareCreate("test").addMapping(
-                "type", "past", "type=date"
+        assertAcked(prepareCreate("test").setMapping(
+                "past", "type=date"
         ));
 
         client().prepareIndex("test").setId("1").setSource("past", "2015-04-05T23:00:00+0000").get();
@@ -535,7 +536,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testMatchQueryNumeric() throws Exception {
-        assertAcked(prepareCreate("test").addMapping("type1", "long", "type=long", "double", "type=double"));
+        assertAcked(prepareCreate("test").setMapping("long", "type=long", "double", "type=double"));
 
         indexRandom(true, client().prepareIndex("test").setId("1").setSource("long", 1L, "double", 1.0d),
                 client().prepareIndex("test").setId("2").setSource("long", 2L, "double", 2.0d),
@@ -552,7 +553,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testMatchQueryFuzzy() throws Exception {
-        assertAcked(prepareCreate("test").addMapping("_doc", "text", "type=text"));
+        assertAcked(prepareCreate("test").setMapping("text", "type=text"));
 
         indexRandom(true, client().prepareIndex("test").setId("1").setSource("text", "Unit"),
                 client().prepareIndex("test").setId("2").setSource("text", "Unity"));
@@ -656,7 +657,7 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testMatchQueryZeroTermsQuery() {
         assertAcked(prepareCreate("test")
-                .addMapping("type1", "field1", "type=text,analyzer=classic", "field2", "type=text,analyzer=classic"));
+                .setMapping("field1", "type=text,analyzer=classic", "field2", "type=text,analyzer=classic"));
         client().prepareIndex("test").setId("1").setSource("field1", "value1").get();
         client().prepareIndex("test").setId("2").setSource("field1", "value2").get();
         refresh();
@@ -680,7 +681,7 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testMultiMatchQueryZeroTermsQuery() {
         assertAcked(prepareCreate("test")
-                .addMapping("type1", "field1", "type=text,analyzer=classic", "field2", "type=text,analyzer=classic"));
+                .setMapping("field1", "type=text,analyzer=classic", "field2", "type=text,analyzer=classic"));
         client().prepareIndex("test").setId("1").setSource("field1", "value1", "field2", "value2").get();
         client().prepareIndex("test").setId("2").setSource("field1", "value3", "field2", "value4").get();
         refresh();
@@ -862,7 +863,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testEmptytermsQuery() throws Exception {
-        assertAcked(prepareCreate("test").addMapping("type", "term", "type=text"));
+        assertAcked(prepareCreate("test").setMapping("term", "type=text"));
 
         indexRandom(true, client().prepareIndex("test").setId("1").setSource("term", "1"),
                 client().prepareIndex("test").setId("2").setSource("term", "2"),
@@ -878,7 +879,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testTermsQuery() throws Exception {
-        assertAcked(prepareCreate("test").addMapping("type", "str", "type=text", "lng", "type=long", "dbl", "type=double"));
+        assertAcked(prepareCreate("test").setMapping("str", "type=text", "lng", "type=long", "dbl", "type=double"));
 
         indexRandom(true,
                 client().prepareIndex("test").setId("1").setSource("str", "1", "lng", 1L, "dbl", 1.0d),
@@ -945,13 +946,13 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testTermsLookupFilter() throws Exception {
-        assertAcked(prepareCreate("lookup").addMapping("type", "terms","type=text", "other", "type=text"));
-        assertAcked(prepareCreate("lookup2").addMapping("type",
-                jsonBuilder().startObject().startObject("type").startObject("properties")
+        assertAcked(prepareCreate("lookup").setMapping("terms","type=text", "other", "type=text"));
+        assertAcked(prepareCreate("lookup2").setMapping(
+                jsonBuilder().startObject().startObject("_doc").startObject("properties")
                         .startObject("arr").startObject("properties").startObject("term").field("type", "text")
                         .endObject().endObject().endObject().endObject().endObject().endObject()));
-        assertAcked(prepareCreate("lookup3").addMapping("type", "_source", "enabled=false", "terms","type=text"));
-        assertAcked(prepareCreate("test").addMapping("type", "term", "type=text"));
+        assertAcked(prepareCreate("lookup3").setMapping("_source", "enabled=false", "terms","type=text"));
+        assertAcked(prepareCreate("test").setMapping("term", "type=text"));
 
         indexRandom(true,
                 client().prepareIndex("lookup").setId("1").setSource("terms", new String[]{"1", "3"}),
@@ -1075,7 +1076,7 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testNumericTermsAndRanges() throws Exception {
         assertAcked(prepareCreate("test")
-                .addMapping("type1",
+                .setMapping(
                         "num_byte", "type=byte", "num_short", "type=short",
                         "num_integer", "type=integer", "num_long", "type=long",
                         "num_float", "type=float", "num_double", "type=double"));
@@ -1174,7 +1175,7 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testNumericRangeFilter_2826() throws Exception {
         assertAcked(prepareCreate("test")
-                .addMapping("type1",
+                .setMapping(
                         "num_byte", "type=byte", "num_short", "type=short",
                         "num_integer", "type=integer", "num_long", "type=long",
                         "num_float", "type=float", "num_double", "type=double"));
@@ -1333,7 +1334,7 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testSimpleDFSQuery() throws IOException {
         assertAcked(prepareCreate("test")
-            .addMapping("_doc", jsonBuilder()
+            .setMapping(jsonBuilder()
                 .startObject()
                 .startObject("_doc")
                 .startObject("_routing")
@@ -1479,7 +1480,7 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testDateProvidedAsNumber() throws InterruptedException {
         createIndex("test");
-        assertAcked(client().admin().indices().preparePutMapping("test").setType("type")
+        assertAcked(client().admin().indices().preparePutMapping("test")
             .setSource("field", "type=date,format=epoch_millis").get());
         indexRandom(true,
                 client().prepareIndex("test").setId("1").setSource("field", 1000000000001L),
@@ -1495,7 +1496,7 @@ public class SearchQueryIT extends ESIntegTestCase {
 
     public void testRangeQueryWithTimeZone() throws Exception {
         assertAcked(prepareCreate("test")
-                .addMapping("type1", "date", "type=date", "num", "type=integer"));
+                .setMapping("date", "type=date", "num", "type=integer"));
 
         indexRandom(true,
                 client().prepareIndex("test").setId("1").setSource("date", "2014-01-01", "num", 1),
@@ -1568,11 +1569,21 @@ public class SearchQueryIT extends ESIntegTestCase {
         assertThat(searchResponse.getHits().getAt(0).getId(), is("4"));
     }
 
+    /**
+     * Test range with a custom locale, e.g. "de" in this case. Documents here mention the day of week
+     * as "Mi" for "Mittwoch (Wednesday" and "Do" for "Donnerstag (Thursday)" and the month in the query
+     * as "Dez" for "Dezember (December)".
+     * Note: this test currently needs the JVM arg `-Djava.locale.providers=SPI,COMPAT` to be set.
+     * When running with gradle this is done implicitly through the BuildPlugin, but when running from
+     * an IDE this might need to be set manually in the run configuration. See also CONTRIBUTING.md section
+     * on "Configuring IDEs And Running Tests".
+     */
     public void testRangeQueryWithLocaleMapping() throws Exception {
         assumeTrue("need java 9 for testing ",JavaVersion.current().compareTo(JavaVersion.parse("9")) >= 0);
+        assert ("SPI,COMPAT".equals(System.getProperty("java.locale.providers"))) : "`-Djava.locale.providers=SPI,COMPAT` needs to be set";
 
         assertAcked(prepareCreate("test")
-            .addMapping("type1", jsonBuilder().startObject().startObject("properties").startObject("date_field")
+            .setMapping(jsonBuilder().startObject().startObject("properties").startObject("date_field")
                     .field("type", "date")
                     .field("format", "E, d MMM yyyy HH:mm:ss Z")
                     .field("locale", "de")
@@ -1651,7 +1662,7 @@ public class SearchQueryIT extends ESIntegTestCase {
     }
 
     public void testRangeQueryRangeFields_24744() throws Exception {
-        assertAcked(prepareCreate("test").addMapping("type1", "int_range", "type=integer_range"));
+        assertAcked(prepareCreate("test").setMapping("int_range", "type=integer_range"));
 
         client().prepareIndex("test").setId("1")
                 .setSource(jsonBuilder().startObject().startObject("int_range").field("gte", 10).field("lte", 20).endObject().endObject())
@@ -1660,41 +1671,6 @@ public class SearchQueryIT extends ESIntegTestCase {
 
         RangeQueryBuilder range = new RangeQueryBuilder("int_range").relation("intersects").from(Integer.MIN_VALUE).to(Integer.MAX_VALUE);
         SearchResponse searchResponse = client().prepareSearch("test").setQuery(range).get();
-        assertHitCount(searchResponse, 1);
-    }
-
-    public void testRangeQueryTypeField_31476() throws Exception {
-        assertAcked(prepareCreate("test").addMapping("foo", "field", "type=keyword"));
-
-        client().prepareIndex("test").setId("1").setSource("field", "value").get();
-        refresh();
-
-        RangeQueryBuilder range = new RangeQueryBuilder("_type").from("ape").to("zebra");
-        SearchResponse searchResponse = client().prepareSearch("test").setQuery(range).get();
-        assertHitCount(searchResponse, 1);
-
-        range = new RangeQueryBuilder("_type").from("monkey").to("zebra");
-        searchResponse = client().prepareSearch("test").setQuery(range).get();
-        assertHitCount(searchResponse, 0);
-
-        range = new RangeQueryBuilder("_type").from("ape").to("donkey");
-        searchResponse = client().prepareSearch("test").setQuery(range).get();
-        assertHitCount(searchResponse, 0);
-
-        range = new RangeQueryBuilder("_type").from("ape").to("foo").includeUpper(false);
-        searchResponse = client().prepareSearch("test").setQuery(range).get();
-        assertHitCount(searchResponse, 0);
-
-        range = new RangeQueryBuilder("_type").from("ape").to("foo").includeUpper(true);
-        searchResponse = client().prepareSearch("test").setQuery(range).get();
-        assertHitCount(searchResponse, 1);
-
-        range = new RangeQueryBuilder("_type").from("foo").to("zebra").includeLower(false);
-        searchResponse = client().prepareSearch("test").setQuery(range).get();
-        assertHitCount(searchResponse, 0);
-
-        range = new RangeQueryBuilder("_type").from("foo").to("zebra").includeLower(true);
-        searchResponse = client().prepareSearch("test").setQuery(range).get();
         assertHitCount(searchResponse, 1);
     }
 
@@ -1717,7 +1693,7 @@ public class SearchQueryIT extends ESIntegTestCase {
                     .endObject()
                 .endObject()
             .endObject();
-        assertAcked(prepareCreate("index").addMapping("_doc", mapping));
+        assertAcked(prepareCreate("index").setMapping(mapping));
 
         XContentBuilder source = XContentFactory.jsonBuilder().startObject()
             .startObject("section")
@@ -1738,7 +1714,7 @@ public class SearchQueryIT extends ESIntegTestCase {
    public void testFieldAliasesForMetaFields() throws Exception {
         XContentBuilder mapping = XContentFactory.jsonBuilder()
             .startObject()
-                .startObject("type")
+                .startObject("_doc")
                     .startObject("properties")
                         .startObject("id-alias")
                             .field("type", "alias")
@@ -1751,25 +1727,35 @@ public class SearchQueryIT extends ESIntegTestCase {
                     .endObject()
             .endObject()
         .endObject();
-        assertAcked(prepareCreate("test").addMapping("type", mapping));
+        assertAcked(prepareCreate("test").setMapping(mapping));
 
         IndexRequestBuilder indexRequest = client().prepareIndex("test")
             .setId("1")
             .setRouting("custom")
             .setSource("field", "value");
         indexRandom(true, false, indexRequest);
+        client().admin().cluster().prepareUpdateSettings()
+            .setTransientSettings(Settings.builder().put(IndicesService.INDICES_ID_FIELD_DATA_ENABLED_SETTING.getKey(), true))
+           .get();
+       try {
+           SearchResponse searchResponse = client().prepareSearch()
+               .setQuery(termQuery("routing-alias", "custom"))
+               .addDocValueField("id-alias")
+               .get();
+           assertHitCount(searchResponse, 1L);
 
-        SearchResponse searchResponse = client().prepareSearch()
-            .setQuery(termQuery("routing-alias", "custom"))
-            .addDocValueField("id-alias")
-            .get();
-        assertHitCount(searchResponse, 1L);
+           SearchHit hit = searchResponse.getHits().getAt(0);
+           assertEquals(2, hit.getFields().size());
+           assertTrue(hit.getFields().containsKey("id-alias"));
 
-        SearchHit hit = searchResponse.getHits().getAt(0);
-        assertEquals(2, hit.getFields().size());
-        assertTrue(hit.getFields().containsKey("id-alias"));
+           DocumentField field = hit.getFields().get("id-alias");
+           assertThat(field.getValue().toString(), equalTo("1"));
+       } finally {
+           // unset cluster setting
+           client().admin().cluster().prepareUpdateSettings()
+               .setTransientSettings(Settings.builder().putNull(IndicesService.INDICES_ID_FIELD_DATA_ENABLED_SETTING.getKey()))
+               .get();
+       }
 
-        DocumentField field = hit.getFields().get("id-alias");
-        assertThat(field.getValue().toString(), equalTo("1"));
    }
 }
